--- a/index.html
+++ b/index.html
@@ -5,11 +5,10 @@
     <title>Ansh's Personal site</title>
   </head>
   <body>
-
     <table cellspacing="20">
       <tr>
         <td>
-          <img src="Ansh.png" alt="Ansh Picture" width="150px" height="150px"/>
+          <img src="images/Ansh.png" alt="Ansh Picture" width="150px" height="150px"/>
         </td>
         <td>
           <h1>Ansh Mittal</h1>
@@ -23,19 +22,15 @@
         </td>
       </tr>
     </table>
-
     <hr />
     <h3>Education</h3>
-
     <table cellspacing="20">
-
       <thead>
         <tr>
           <th>Dates</th>
           <th>Class Name</th>
         </tr>
       </thead>
-
       <tbody>
         <tr>
           <td>2022-now</td>
@@ -51,10 +46,8 @@
         </tr>
       </tbody>
     </table>
-
     <hr />
     <h3>Skills</h3>
-
     <table cellspacing="10">
       <tr>
         <td>
@@ -91,11 +84,8 @@
         </td>
       </tr>
     </table>
-
-
     <hr />
     <a href="hobbies.html">My Hobbies</a>
     <a href="contactme.html" >Contact me</a>
-
   </body>
 </html>
