--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
         <td>
           <h1>Ansh Mittal</h1>
           <p>
-            <strong>Future Goal: </strong>
-            <em><strong><a href="https://www.google.com/search?q=what+is+full+stack+developer&rlz=1C1RLNS_enIN1016IN1016&oq=what+is+Full+&aqs=chrome.1.69i57j0i512l9.11743j0j1&sourceid=chrome&ie=UTF-8">Full Stack Web Developer</a></strong>, <strong><a href="https://en.wikipedia.org/wiki/Digital_marketing">Digital marketing</a></strong> expert and <strong><a href="https://www.google.com/search?q=what+is+seo+in+digital+marketing&rlz=1C1RLNS_enIN1016IN1016&sxsrf=ALiCzsbMWRNf6ukTXZ-YjRUOMT5OJLaL1w%3A1663727148496&ei=LHYqY53vHdyNseMPgfSOmAk&oq=what+is+SEO+&gs_lcp=Cgdnd3Mtd2l6EAEYADIKCAAQgAQQhwIQFDIKCAAQgAQQhwIQFDIFCAAQgAQyBQgAEIAEMgQIABBDMgUIABCABDIECAAQQzIFCAAQgAQyBQgAEIAEMgUIABCABDoKCAAQRxDWBBCwAzoHCAAQsAMQQ0oECEEYAEoECEYYAFDLAVjLAWDmCGgBcAF4AIABxAOIAcQDkgEDNC0xmAEAoAEByAEKwAEB&sclient=gws-wiz">SEO</a> Environment Handler.</strong></em>
+            <strong>Stuent </strong>
           </p>
           <p>
             Hello, My name is Ansh Mittal form India.I complete 12th standard in 2020.I am currenlty doing a polytechnic form <abbr title="Computer Science">C.S.</abbr> Branch.
