--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <td>
           <h1>Ansh Mittal</h1>
           <p>
-            <strong>Stuent </strong>
+            <strong>Student </strong>
           </p>
           <p>
             Hello, My name is Ansh Mittal form India.I complete 12th standard in 2020.I am currenlty doing a polytechnic form <abbr title="Computer Science">C.S.</abbr> Branch.
